gl33-master/src/test/deca/context/invalid/other/appelFauxFonction1.deca
// Test de contexte invalide : appel faux de la fonction (pas de paramètres)

class MyClass{

    int puissance(int a){
        return a*a;
    }
}

{
    MyClass m = new MyClass();
    int x = m.puissance();
}
